[project]
name = "modular-diffusion"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Tassos Manganaris", email = "tassos.manganaris@gmail.com"}]
requires-python = ">=3.8,<3.9"
dependencies = ["lightning"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
modular-diffusion = { path = ".", editable = true }

[tool.pixi.tasks]
